fixed scrollbar color selector

--- a/packages/ag-grid-docs/src/_assets/homepage/_demo.scss
+++ b/packages/ag-grid-docs/src/_assets/homepage/_demo.scss
@@ -17,10 +17,6 @@
     width: 100%;
 }
 
-[class^='ag-theme'][class$='dark'] {
+[class^='ag-theme'][class*='dark'] {
   @include scrollbars(15px, #6b6b6b, #1c1f20, #959595, #424242);
-}
-
-.ag-theme-balham-dark {
-    @include scrollbars(15px, #6b6b6b, #1c1f20, #959595, #424242);
 }
